--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 node_modules/
 .expo/
 dist/
+example/
+example/SampleCat/*
 npm-debug.*
 *.jks
 *.p8
@@ -13,7 +15,6 @@ web-build/
 expo-env.d.ts
 
 
-
 ios
 android
 
@@ -22,3 +23,4 @@ android
 
 # Temporary files created by Metro to check the health of the file watcher
 .metro-health-check*
+app/_layout.tsx
