--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/space-grotesk": "^0.4.0",
+    "@expo-google-fonts/special-elite": "^0.4.0",
     "@expo/react-native-action-sheet": "^4.1.1",
     "@expo/vector-icons": "^14.0.0",
     "@gorhom/bottom-sheet": "^4.6.4",
@@ -35,12 +37,14 @@
     "expo-dev-client": "~5.2.4",
     "expo-dev-launcher": "^5.0.17",
     "expo-file-system": "~18.1.11",
+    "expo-font": "~13.3.2",
     "expo-image": "~2.4.0",
     "expo-image-picker": "~16.1.4",
     "expo-linking": "~7.1.4",
     "expo-media-library": "~17.1.7",
     "expo-navigation-bar": "~4.2.7",
     "expo-router": "~5.1.4",
+    "expo-splash-screen": "~0.30.10",
     "expo-status-bar": "~2.2.3",
     "expo-store-review": "~8.1.5",
     "expo-system-ui": "~5.0.6",
