--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
   "expo": {
     "name": "Bar Vibez",
     "slug": "barvibez",
-    "version": "1.0.4",
+    "version": "1.0.5",
     "scheme": "barvibez",
     "web": {
       "bundler": "metro",
@@ -32,9 +32,7 @@
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "assetBundlePatterns": ["**/*"],
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "us.nomadsoft.barvibez",
